argocd/atrium/bacchus-repo/resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bacchus-repo
spec:
  hostnames:
    - repo.snucse.org
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-snucse-org
  rules:
    - backendRefs:
        - name: bacchus-repo
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bacchus-repo
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bacchus-repo
spec:
  template:
    spec:
      containers:
        - name: caddy
          image: caddy
          volumeMounts:
            - name: config
              subPath: Caddyfile
              mountPath: /etc/caddy/Caddyfile
              readOnly: true
            - name: packages
              mountPath: /srv/repos
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
        - name: reprepro
          image: ghcr.io/bacchus-snu/reprepro_docker_img:main
          command:
            - /bin/sh
            - -c
            - sleep inf
          volumeMounts:
            - name: packages
              mountPath: /srv/repos
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: bacchus-repo-caddy-config
  volumeClaimTemplates:
    - metadata:
        name: packages
      spec:
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
